--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "mattgrayisok/craft-recently-viewed",
     "description": "Craft CMS plugin to find recently viewed elements of any type.",
     "type": "craft-plugin",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "keywords": [
         "craft",
         "cms",
@@ -23,7 +23,7 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^3.0.0-RC1"
+        "craftcms/cms": "^3.0.0-RC1|^4.0.0-beta.1"
     },
     "autoload": {
         "psr-4": {
